# ComfyUI-Supabase-Power

./: LICENSE  README.md  __init__.py  flickering-bubbling-teapot.md  pyproject.toml  requirements.txt
core/: __init__.py  client.py  custom_types.py  types.py  utils.py
nodes/: __init__.py
nodes/auth/: __init__.py  sign_in.py  user_info.py
nodes/config/: __init__.py  connection.py
nodes/database/: __init__.py  delete.py  insert.py  rpc.py  select.py  update.py  upsert.py
nodes/edge/: __init__.py  invoke.py
nodes/query/: __init__.py  filter.py  order.py  pagination.py
nodes/realtime/: __init__.py  broadcast.py  subscribe.py
nodes/storage/: __init__.py  delete_file.py  download.py  list_files.py  signed_url.py  upload.py
nodes/utils/: __init__.py  error_handler.py  json_builder.py  response_parser.py
web/js/: supabase_nodes.js
